--- a/choose.html
+++ b/choose.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="author" content="Grayrids">
     <title>神無月撮影所 - 選擇攝影棚</title>
+    <link id="favicon" rel="shortcut icon" href="img/favicon.png">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -70,7 +71,7 @@
       <div class="mt-2">&nbsp;</div>
       <div class="section-group row mx-1 mt-5">
         <div class="col-md-5 px-0 py-2">
-          <img src="img/combo1/img_2038.jpeg" width="95%" alt="Hills">
+          <img src="img/combo1/x70f9556_orig.jpg" width="95%" alt="Hills">
         </div>
         <div class="col-md-7 pl-5 position-relative">
           <div class="text-gray">
@@ -80,8 +81,8 @@
             </h4>
           </div>
           <div class="position-absolute d-flex justify-content-end" style="right: 0; bottom: 5px;">
-            <a href="choose1.html" class="mr-3 btn btn-lg btn-view btn-effect wow fadeInRight" data-wow-delay="0.9s">看更多</a>
-            <a href="book.html?item=1" class="btn btn-lg btn-view btn-effect wow fadeInRight" data-wow-delay="0.9s">直接預約</a>
+            <a href="choose1.html" class="mr-3 btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">看更多</a>
+            <a href="book.html?item=1" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">直接預約</a>
           </div>
         </div>
       </div>
@@ -98,9 +99,9 @@
               江戶時代起源，男人的樂園<br>
               那是一個屬於時代的悲歌及浪漫
             </h4>
-            <div class="position-absolute d-flex justify-content-end" style="right: 20px; bottom: 5px;">
-              <a href="choose2.html" class="mr-3 btn btn-lg btn-view btn-effect wow fadeInRight" data-wow-delay="0.9s">看更多</a>
-              <a href="book.html?item=2" class="btn btn-lg btn-view btn-effect wow fadeInRight" data-wow-delay="0.9s">直接預約</a>
+            <div class="position-absolute d-flex justify-content-start" style="left: 10px; bottom: 5px;">
+              <a href="choose2.html" class="mr-3 btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">看更多</a>
+              <a href="book.html?item=2" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">直接預約</a>
             </div>
           </div>
         </div>
@@ -125,8 +126,8 @@
               戰爭後的各種意識抬頭以及西洋化，體現在時尚、建築上面，因此又稱「大正浪漫」
             </h4>
             <div class="position-absolute d-flex justify-content-end" style="right: 0; bottom: 5px;">
-              <a href="choose3.html" class="mr-3 btn btn-lg btn-view btn-effect wow fadeInRight" data-wow-delay="0.9s">看更多</a>
-              <a href="book.html?item=3" class="btn btn-lg btn-view btn-effect wow fadeInRight" data-wow-delay="0.9s">直接預約</a>
+              <a href="choose3.html" class="mr-3 btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">看更多</a>
+              <a href="book.html?item=3" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">直接預約</a>
             </div>
           </div>
         </div>
@@ -257,11 +258,15 @@
     </a>
 
     <div id="loader">
-      <div class="spinner">
-        <div class="double-bounce1"></div>
-        <div class="double-bounce2"></div>
+      <div class="loaderBox w-100">
+        <div class="loader loader-2"></div>
       </div>
-    </div>    
+      <div class="loaderText">
+        <div class="dynamic-text-wrapper">
+          <div class="dynamic-text">神無月撮影所</div>
+        </div>
+      </div>
+    </div>  
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="js/jquery-min.js"></script>
