--- a/choose2.html
+++ b/choose2.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="author" content="Grayrids">
     <title>神無月撮影所 - 吉原遊廓</title>
+    <link id="favicon" rel="shortcut icon" href="img/favicon.png">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -121,6 +122,26 @@
               <div class="carousel-item">
                 <img src="img/combo2/img-0432-2_1_orig.jpg" alt="Hills">
               </div>
+
+              <div class="carousel-item">
+                <img src="img/combo2/04_6_orig.png" alt="Hills">
+              </div>
+
+              <div class="carousel-item">
+                <img src="img/combo2/05_4_orig.png" alt="Hills">
+              </div>
+
+              <div class="carousel-item">
+                <img src="img/combo2/01_11_orig.png" alt="Hills">
+              </div>
+
+              <div class="carousel-item">
+                <img src="img/combo2/02_8_orig.png" alt="Hills">
+              </div>
+
+              <div class="carousel-item">
+                <img src="img/combo2/03_1_orig.png" alt="Hills">
+              </div>
             </div>
     
             <!-- Left right -->
@@ -162,6 +183,36 @@
                   <img src="img/combo2/img-0432-2_1_orig.jpg" class="img-fluid">
                 </a>
               </li>
+
+              <li class="list-inline-item">
+                <a id="carousel-selector-5" data-slide-to="5" data-target="#custCarousel">
+                  <img src="img/combo2/04_6_orig.png" class="img-fluid">
+                </a>
+              </li>
+
+              <li class="list-inline-item">
+                <a id="carousel-selector-6" data-slide-to="6" data-target="#custCarousel">
+                  <img src="img/combo2/05_4_orig.png" class="img-fluid">
+                </a>
+              </li>
+
+              <li class="list-inline-item">
+                <a id="carousel-selector-7" data-slide-to="7" data-target="#custCarousel">
+                  <img src="img/combo2/01_11_orig.png" class="img-fluid">
+                </a>
+              </li>
+
+              <li class="list-inline-item">
+                <a id="carousel-selector-8" data-slide-to="8" data-target="#custCarousel">
+                  <img src="img/combo2/02_8_orig.png" class="img-fluid">
+                </a>
+              </li>
+
+              <li class="list-inline-item">
+                <a id="carousel-selector-9" data-slide-to="9" data-target="#custCarousel">
+                  <img src="img/combo2/03_1_orig.png" class="img-fluid">
+                </a>
+              </li>
              </ol>
           </div>
         </div>
@@ -169,7 +220,7 @@
     </div>    
 
     <div class="text-center mb-5">
-      <a href="book.html?item=2" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">預約該攝影棚</a>
+      <a href="book.html?item=2" class="btn btn-lg btn-common btn-effect wow bounceIn" data-wow-delay="0.1s">預約該攝影棚</a>
     </div>
 
     <!-- Footer Section Start -->
@@ -253,11 +304,15 @@
     </a>
 
     <div id="loader">
-      <div class="spinner">
-        <div class="double-bounce1"></div>
-        <div class="double-bounce2"></div>
+      <div class="loaderBox w-100">
+        <div class="loader loader-2"></div>
       </div>
-    </div>    
+      <div class="loaderText">
+        <div class="dynamic-text-wrapper">
+          <div class="dynamic-text">神無月撮影所</div>
+        </div>
+      </div>
+    </div>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="js/jquery-min.js"></script>
