--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,8 @@
     <meta name="keywords" content="Bootstrap, Landing page, Template, Registration, Landing">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="author" content="Grayrids">
-    <title>神無月撮影所</title>
+    <title>神無月撮影所 - 聯絡我們</title>
+    <link id="favicon" rel="shortcut icon" href="img/favicon.png">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -244,11 +245,15 @@
     </a>
 
     <div id="loader">
-      <div class="spinner">
-        <div class="double-bounce1"></div>
-        <div class="double-bounce2"></div>
+      <div class="loaderBox w-100">
+        <div class="loader loader-2"></div>
       </div>
-    </div>    
+      <div class="loaderText">
+        <div class="dynamic-text-wrapper">
+          <div class="dynamic-text">神無月撮影所</div>
+        </div>
+      </div>
+    </div>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="js/jquery-min.js"></script>
