--- a/choose2.html
+++ b/choose2.html
@@ -307,11 +307,11 @@
       <div class="loaderBox w-100">
         <div class="loader loader-2"></div>
       </div>
-      <div class="loaderText">
+      <!-- <div class="loaderText">
         <div class="dynamic-text-wrapper">
           <div class="dynamic-text">神無月撮影所</div>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
