新增棚景介紹的說明文字

--- a/choose.html
+++ b/choose.html
@@ -77,7 +77,7 @@
           <div class="text-gray">
             <h2 class="text-red wow fadeInRight mb-3" data-wow-delay="0.4s">江户幕府</h2>
             <h4 class="wow fadeInRight mb-4" data-wow-delay="0.6s">
-              又稱作「德川幕府」，江戶時代初期的太平盛世，是在結束戰國亂世的人民心中的和平曙光。
+              最經典的和風造景，莊嚴寧靜的武家色彩，精緻的屏風與拉門勾勒出傳統貴族的低調奢華。適合古典穩重的拍攝主題。
             </h4>
           </div>
           <div class="position-absolute d-flex justify-content-end" style="right: 0; bottom: 5px;">
@@ -96,8 +96,7 @@
           <div class="text-gray">
             <h2 class="text-red wow fadeInRight mb-3" data-wow-delay="0.4s">吉原遊廓</h2>
             <h4 class="wow fadeInRight mb-4" data-wow-delay="0.6s">
-              江戶時代起源，男人的樂園<br>
-              那是一個屬於時代的悲歌及浪漫
+              華麗而繁盛，花團錦簇的煙花柳巷。明豔的燈光和綻放的花朵打造了奢糜纏綿的不夜城。適合較為大膽活潑的拍攝主題。
             </h4>
             <div class="position-absolute d-flex justify-content-start" style="left: 10px; bottom: 5px;">
               <a href="choose2.html" class="mr-3 btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">看更多</a>
@@ -122,8 +121,7 @@
           <div class="text-gray">
             <h2 class="text-red wow fadeInRight mb-3" data-wow-delay="0.4s">大正浪漫</h2>
             <h4 class="wow fadeInRight mb-4" data-wow-delay="0.6s">
-              日本史上年號最短的時代<br>
-              戰爭後的各種意識抬頭以及西洋化，體現在時尚、建築上面，因此又稱「大正浪漫」
+              和洋融合、明媚絢爛的浪漫時代。洋氣卻不失傳統元素的私人宅邸，讓人置身新舊時代的交點。適合風格多元、帶著近代色彩的拍攝主題。
             </h4>
             <div class="position-absolute d-flex justify-content-end" style="right: 0; bottom: 5px;">
               <a href="choose3.html" class="mr-3 btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">看更多</a>
