新增價格單位

--- a/book.html
+++ b/book.html
@@ -155,7 +155,7 @@
             <!-- <div class="form-group"> -->
               <div class="custom-control custom-checkbox">
                 <input type="checkbox" class="custom-control-input" id="haha">
-                <label class="custom-control-label" for="haha">是否要使用我們的御用攝影師？(800/hr)</label>
+                <label class="custom-control-label" for="haha">是否要使用我們的御用攝影師？(NT$800/hr)</label>
               </div>
             <!-- </div> -->
             <div class="position-absolute d-flex justify-content-end" style="right: 0; bottom: 5px;">
